--- a/index.html
+++ b/index.html
@@ -40,6 +40,17 @@
 
       <article class="proyecto">
         <h3>Proyecto Día 1</h3>
+        <!-- Proyecto Fotos de Gatos -->
+  <article class="proyecto">
+    <h3>Aplicación de Fotos de Gatos</h3>
+    <p>
+      Un proyecto simple para practicar HTML y mostrar fotos de gatitos adorables.
+    </p>
+    <div class="proyecto-links">
+      <a href="https://1994mayher-alt.github.io/catphotoapp/" target="_blank">Ver página</a>
+      <a href="https://github.com/1994mayher-alt/catphotoapp" target="_blank">Ver código</a>
+    </div>
+  </article>
         <p>
           Primera práctica de HTML y CSS: estructura básica, imagen y estilos.
         </p>
